# polars

./: Cargo.toml
api/rust/dev/: search-index.js
api/rust/dev/polars/: all.html  constant.VERSION.html  index.html
api/rust/dev/polars_core/: all.html  constant.CHEAP_SERIES_HASH_LIMIT.html  index.html  static.PROCESS_ID.html  static.SINGLE_LOCK.html  static.THREAD_POOL.html  struct.POOL.html
api/rust/dev/polars_lazy/: all.html
api/rust/dev/polars_time/: struct.Duration.html
api/rust/dev/polars_utils/: all.html  index.html  macro.unitvec.html
api/rust/dev/search.index/: 0005b8f4a94f.js  0010a217318b.js  001974cf3beb.js  001c43103630.js  001e8cc17560.js  001f9e629522.js  0021982e0f32.js  0024ab5cd7cb.js  003fec84b328.js  0043aaf8a625.js  00482d7243e5.js  (+4380 more)
crates/polars/: Cargo.toml
crates/polars-expr/: Cargo.toml
crates/polars-hdf5/: Cargo.toml
crates/polars-hdf5/src/: lib.rs
crates/polars-hdf5/src/metadata/: file_layout.rs  hdf5_file_metadata.rs  mod.rs  vaex_hdf5.rs
crates/polars-io/: Cargo.toml
crates/polars-io/src/: lib.rs
crates/polars-lazy/: Cargo.toml
crates/polars-mem-engine/: Cargo.toml
crates/polars-pipe/: Cargo.toml
crates/polars-plan/: Cargo.toml
crates/polars-sql/: Cargo.toml
docs/python/dev/: searchindex.js
docs/src/rust/: Cargo.toml
py-polars/: Cargo.toml
py-polars/polars/: __init__.py
py-polars/polars/_utils/: TC_expressions.py
py-polars/polars/dataframe/: frame.py
py-polars/polars/io/: __init__.py
py-polars/polars/series/: series.py
py-polars/src/lazyframe/: mod.rs
py-polars/src/polars/: __init__.py
(+491 files in other folders)
