[package]
name = "polars-hdf5"
version = { workspace = true }
authors = ["TBC <tbc@gmail.com>"]
edition = { workspace = true }
homepage = { workspace = true }
license = "MIT"
repository = { workspace = true }
description = "HDF5 I/O operations for Polars"

[dependencies]
ahash = { workspace = true }
arrow = { workspace = true, features = ["io_ipc"] }
base64 = { workspace = true }
ethnum = { workspace = true }
fallible-streaming-iterator = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
num-traits = { workspace = true }
polars-error = { workspace = true }
polars-utils = { workspace = true }
simdutf8 = { workspace = true }

seq-macro = { version = "0.3", default-features = false }
streaming-decompression = "0.1"

async-stream = { version = "0.3.3", optional = true }

serde = { version = "^1.0", optional = true, features = ["derive"] }
snap = { version = "^1.1", optional = true }

xxhash-rust = { version = "0.8", optional = true, features = ["xxh64"] }
hdf5 = "0.8.1"

# [features]
# compression = ["zstd", "gzip", "snappy", "lz4", "brotli"]

# async = ["async-stream", "futures", "parquet-format-safe/async"]
# bloom_filter = ["xxhash-rust"]
# serde_types = ["serde"]
